--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "@stackso/js-core": "^0.4.17",
     "@xmtp/xmtp-js": "^11.4.1",
     "axios": "^1.5.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "ethers": "^5.7.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ethers": "^5.7.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.8"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,7 +41,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "assert": "^2.0.0",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "typescript": "^4.9.5"
   }
 }
